// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deve renderizar corretamente 1`] = `
.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0px;
  font-size: 0.75rem;
}

.emotion-3 > *:not(:last-child) {
  margin-right: 0.25rem;
}

.emotion-0 {
  -webkit-transition: 0.2s all;
  transition: 0.2s all;
  border-radius: 2px;
  padding: 0.25rem 0.5rem;
}

.emotion-0:hover {
  background: #e6e6e6;
}

.emotion-1 {
  background-color: #ffffff;
  border: solid 1px #cccccc;
  border-radius: 2px;
  color: #4d4d4d;
  font-family: "Noto Sans",sans-serif;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 1rem;
  width: 100%;
  -webkit-transition: all .2s;
  transition: all .2s;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  width: 47px;
  text-align: center;
}

.emotion-1::-webkit-input-placeholder {
  color: #cccccc;
}

.emotion-1::-moz-placeholder {
  color: #cccccc;
}

.emotion-1:-ms-input-placeholder {
  color: #cccccc;
}

.emotion-1::placeholder {
  color: #cccccc;
}

.emotion-1:disabled {
  background-color: #f2f2f7;
}

.emotion-1:not(:disabled):hover {
  border-color: #999999;
}

.emotion-1:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-1:not(:disabled):active {
  border-color: #056DFF;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

<div
  class="emotion-3"
>
  <span>
    <a
      class="emotion-0"
      title="Página anterior"
    >
      &lt;
    </a>
  </span>
  <input
    class="emotion-1"
    styles="[object Object]"
    type="text"
    value="6"
  />
  <span>
    de 10
  </span>
  <span>
    <a
      class="emotion-0"
      title="Próxima página"
    >
      &gt;
    </a>
  </span>
</div>
`;

exports[`deve renderizar corretamente 2`] = `
.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0px;
  font-size: 0.75rem;
}

.emotion-3 > *:not(:last-child) {
  margin-right: 0.25rem;
}

.emotion-2 {
  -webkit-transition: 0.2s all;
  transition: 0.2s all;
  border-radius: 2px;
  padding: 0.25rem 0.5rem;
}

.emotion-2:hover {
  background: #e6e6e6;
}

.emotion-1 {
  background-color: #ffffff;
  border: solid 1px #cccccc;
  border-radius: 2px;
  color: #4d4d4d;
  font-family: "Noto Sans",sans-serif;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 1rem;
  width: 100%;
  -webkit-transition: all .2s;
  transition: all .2s;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  width: 47px;
  text-align: center;
}

.emotion-1::-webkit-input-placeholder {
  color: #cccccc;
}

.emotion-1::-moz-placeholder {
  color: #cccccc;
}

.emotion-1:-ms-input-placeholder {
  color: #cccccc;
}

.emotion-1::placeholder {
  color: #cccccc;
}

.emotion-1:disabled {
  background-color: #f2f2f7;
}

.emotion-1:not(:disabled):hover {
  border-color: #999999;
}

.emotion-1:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-1:not(:disabled):active {
  border-color: #056DFF;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-0 {
  -webkit-transition: 0.2s all;
  transition: 0.2s all;
  border-radius: 2px;
  padding: 0.25rem 0.5rem;
  color: #cccccc;
  cursor: not-allowed;
}

.emotion-0:hover {
  background: #e6e6e6;
}

.emotion-0:hover {
  background: transparent;
}

<div
  class="emotion-3"
>
  <span>
    <a
      class="emotion-0"
      title="Página anterior"
    >
      &lt;
    </a>
  </span>
  <input
    class="emotion-1"
    styles="[object Object]"
    type="text"
    value="1"
  />
  <span>
    de 10
  </span>
  <span>
    <a
      class="emotion-2"
      title="Próxima página"
    >
      &gt;
    </a>
  </span>
</div>
`;

exports[`deve renderizar corretamente 3`] = `
.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0px;
  font-size: 0.75rem;
}

.emotion-3 > *:not(:last-child) {
  margin-right: 0.25rem;
}

.emotion-2 {
  -webkit-transition: 0.2s all;
  transition: 0.2s all;
  border-radius: 2px;
  padding: 0.25rem 0.5rem;
}

.emotion-2:hover {
  background: #e6e6e6;
}

.emotion-1 {
  background-color: #ffffff;
  border: solid 1px #cccccc;
  border-radius: 2px;
  color: #4d4d4d;
  font-family: "Noto Sans",sans-serif;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 1rem;
  width: 100%;
  -webkit-transition: all .2s;
  transition: all .2s;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  width: 47px;
  text-align: center;
}

.emotion-1::-webkit-input-placeholder {
  color: #cccccc;
}

.emotion-1::-moz-placeholder {
  color: #cccccc;
}

.emotion-1:-ms-input-placeholder {
  color: #cccccc;
}

.emotion-1::placeholder {
  color: #cccccc;
}

.emotion-1:disabled {
  background-color: #f2f2f7;
}

.emotion-1:not(:disabled):hover {
  border-color: #999999;
}

.emotion-1:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-1:not(:disabled):active {
  border-color: #056DFF;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-0 {
  -webkit-transition: 0.2s all;
  transition: 0.2s all;
  border-radius: 2px;
  padding: 0.25rem 0.5rem;
  color: #cccccc;
  cursor: not-allowed;
}

.emotion-0:hover {
  background: #e6e6e6;
}

.emotion-0:hover {
  background: transparent;
}

<div
  class="emotion-3"
>
  <span>
    <a
      class="emotion-0"
      title="Página anterior"
    >
      &lt;
    </a>
  </span>
  <input
    class="emotion-1"
    styles="[object Object]"
    type="text"
    value="1"
  />
  <span>
    de 9
  </span>
  <span>
    <a
      class="emotion-2"
      title="Próxima página"
    >
      &gt;
    </a>
  </span>
</div>
`;
